--- a/src/Map.css
+++ b/src/Map.css
@@ -18,17 +18,19 @@
 }
 
 .info-name {
+  padding-top: 10px;
   font-size: 20px;
   font-weight: bold;
   color: #555;
 }
 
 .info-container {
-  width: 150px;
+  width: 15em;
 }
 
+
 .info-flag {
-  height: 80px;
+  height: 10em;
   width: 100%;
   background-size: cover;
   border-radius: 8px;
